Fix mobile socials gap

--- a/css/main.css
+++ b/css/main.css
@@ -228,6 +228,7 @@ img {
           justify-content: start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  row-gap: 8px;
 }
 @media screen and (min-width: 768px) {
   .socials--start {
