--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -7,6 +7,7 @@
   &--start {
     justify-content: start;
     flex-wrap: wrap;
+    row-gap: 8px;
 
     @media screen and (min-width: 768px) {
       display: none;
